# Jupiter

./: .env.example  .gitignore  .jupiter-bootstrap  CHANGELOG.md  CLA.md  CONTRIBUTING.md  JUPITER.md  LICENSE  README.ja-JP.md  README.md  README.zh-CN.md  SECURITY.md  install-linux.sh  package-lock.json  package.json  stryker.config.mjs  tsup.config.ts
.github/: issue-labeler.yml
benchmarks/: README.md
dashboard/: PARITY.md  app.css  app.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/: SIGNING.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: English.nsh  SimpChinese.nsh
desktop/src-tauri/src/: main.rs  rpc.rs  terminal.rs
docs/: ARCHITECTURE.md  CLI-REFERENCE.md  arch-i18n.js  architecture.html  cli-ref-i18n.js  cli-reference.html  configuration.html  download.html  feishu-connect.zh-CN.md  guide-i18n.js  i18n.js  index.html  qq-connect.md  qq-connect.zh-CN.md  robots.txt  sitemap.xml  styles.css
examples/: mcp-server-demo.ts  replay-and-diff.ts
scripts/: build-arch-package.sh  copy-dashboard-vendor-css.mjs  ctrlc-probe.mjs  measure-tool-sizes.mts  measure-tool-token-cost.mts  probe-fanout.mts  probe-lifecycle-cache-neutral.mts  probe-long-session.mts  probe-loop-cache.mts  probe-render-large-session.mts  render-arch-pkgbuild.mjs  shift-enter-probe.mjs  smoke-memory.mts  sync-desktop-version.mjs
src/: client.ts  config.ts  context-manager.ts  demo-utils.ts  hooks.ts  index.ts  loop.ts  prompt-fragments.ts  session-import.ts  session-title.ts  skill-packs.ts  skills.ts  slash-usage.ts  tokenizer.ts  tools.ts  version.ts
tests/: acp-transcript.test.ts  acp.test.ts  (+196 more)
(+412 files in other folders)
