[package]
name = "jupiter-desktop"
version = "1.0.2"
edition = "2021"
publish = false
autobins = false
default-run = "Jupiter"

[[bin]]
name = "Jupiter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api", "tray-icon", "unstable"] }
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
anyhow = "1"
which = "7"
zip = { version = "2", default-features = false, features = ["deflate"] }
portable-pty = "0.9.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
